# eth-serializer

./: README.md  build.zig  build.zig.zon  flake.nix  test.js
parser/: Cargo.toml  binding.gyp  grammar.js  package.json
parser/bindings/node/: binding.cc  index.js
parser/bindings/rust/: lib.rs
parser/src/: grammar.json  node-types.json  parser.c
parser/test/corpus/: statements.txt
src/: cli.zig
